Beside monitor scaling factors, a user may specify a preferred text DPI size from the system configuration utility (KCM fonts) That setting is stored inside the kcmfonts configuration file; one entry is kept for Plasma/X11 sessions, "forceFontDPI", and another for Plasma/Wayland sessions, "forceFontDPIWayland".

Here we make kde-gtk-config read such entries (depending on the
Plasma session type) and then set the GTK text scaling settings
accordingly.

Fixes #3

BUG: 466463
BUG: 461106
FIXED-IN: 5.27.4